--- a/InstantMessenger/app/src/main/res/values/strings.xml
+++ b/InstantMessenger/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">InstantMessenger</string>
+    <string name="app_name">即聊</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
